# SDL3_Game

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: Collision.cpp  Collision.h  Common.h  GameObject.cpp  GameObject.h  PhysicsBody.cpp  PhysicsBody.h  Transform.h  Vec2.h
src/gameobjects/: Circle.cpp  Circle.h  Collision.cpp  Collision.h  Floor.cpp  Floor.h  GameObject.cpp  GameObject.h  PhysicsBody.cpp  PhysicsBody.h  Player.cpp  Player.h  Square.cpp  Square.h
